--- a/react-forms/index.html
+++ b/react-forms/index.html
@@ -1,1 +1,1 @@
-
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Document</title><script defer="defer" src="runtime~main.0e02c88e8344ca535c9d.js"></script><script defer="defer" src="main.0e02c88e8344ca535c9d.js"></script></head><body><div id="root"></div></body></html>
