feat: add project files

--- a/react-API/index.html
+++ b/react-API/index.html
@@ -1,1 +1,1 @@
-
+<!doctype html><html lang="en"><head><meta charset="UTF-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>React API</title><script defer="defer" src="runtime~main.f3c547636d5d9afcc572.js"></script><script defer="defer" src="main.f3c547636d5d9afcc572.js"></script></head><body><div id="root"></div></body></html>
