--- a/react-router/index.html
+++ b/react-router/index.html
@@ -1,1 +1,1 @@
-
+<!doctype html><html lang="en"><head><meta charset="UTF-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>React API</title><script defer="defer" src="runtime~main.8d0068132a886605cefc.js"></script><script defer="defer" src="main.8d0068132a886605cefc.js"></script></head><body><div id="root"></div></body></html>
