--- a/react-router/index.html
+++ b/react-router/index.html
@@ -1,1 +1,13 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="viewport" content="width=device-width,initial-scale=1"/><link rel="shortcut icon" href="favicon.ico"/><title>React Redux</title><script defer="defer" src="/runtime~main.e52037f6ebcae3adba05.js"></script><script defer="defer" src="/main.e52037f6ebcae3adba05.js"></script></head><body><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="favicon.ico" />
+    <title>React Redux</title>
+  <script defer src="/runtime~main.1c244822cb5c6afc347d.js"></script><script defer src="/main.1c244822cb5c6afc347d.js"></script></head>
+  <body>
+    <div id="root"></div>
+  </body>
+</html>
